tests/liquid/neg/simple/parse-00.js
/*@ c :: {number | v < 0} */ 
var c = 1;

/*@ e :: {string | v = "aaaa"} */
var e =  "aaa";

